WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254980
GraphicsContextGL with*BufferAsNativeImage uses wrong conventions for passing functions
https://bugs.webkit.org/show_bug.cgi?id=254980
Summary
GraphicsContextGL with*BufferAsNativeImage uses wrong conventions for passing...
Kimmo Kinnunen
Reported
2023-04-04 01:13:36 PDT
GraphicsContextGL with*BufferAsNativeImage uses wrong conventions for passing functions
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-04 01:14:15 PDT
<
rdar://problem/107600402
>
Kimmo Kinnunen
Comment 2
2023-04-04 01:17:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12370
EWS
Comment 3
2023-04-14 05:08:58 PDT
Committed
262955@main
(8cfd07c30f40): <
https://commits.webkit.org/262955@main
> Reviewed commits have been landed. Closing PR #12370 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug