GraphicsContextGL with*BufferAsNativeImage uses wrong conventions for passing functions https://bugs.webkit.org/show_bug.cgi?id=254980 rdar://107600402

Reviewed by Matt Woodrow.

Use WTF::Function instead of std::function to match other WebKit code.

In RemoteGraphicsContextGL, do not pass the IPC completion handler into
the calling functions. This would imply deferred call, but the
withDrawingBufferAsNativeImage implies that the call cannot possibly defer,
e.g. the function argument implies limited lifetime of the NativeImage,
which in turn implies the non-deferred invocation.

* Source/WebCore/platform/graphics/angle/GraphicsContextGLANGLE.cpp:
(WebCore::GraphicsContextGLANGLE::withDrawingBufferAsNativeImage):
(WebCore::GraphicsContextGLANGLE::withDisplayBufferAsNativeImage):
* Source/WebCore/platform/graphics/angle/GraphicsContextGLANGLE.h:
* Source/WebCore/platform/graphics/cocoa/GraphicsContextGLCocoa.h:
* Source/WebCore/platform/graphics/cocoa/GraphicsContextGLCocoa.mm:
(WebCore::GraphicsContextGLCocoa::withDrawingBufferAsNativeImage):
(WebCore::GraphicsContextGLCocoa::withDisplayBufferAsNativeImage):
* Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGL.cpp:
(WebKit::RemoteGraphicsContextGL::paintRenderingResultsToCanvas):
(WebKit::RemoteGraphicsContextGL::paintRenderingResultsToCanvasWithQualifiedIdentifier):
(WebKit::RemoteGraphicsContextGL::paintCompositedResultsToCanvas):
(WebKit::RemoteGraphicsContextGL::paintCompositedResultsToCanvasWithQualifiedIdentifier):
(WebKit::RemoteGraphicsContextGL::paintNativeImageToImageBuffer):
* Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGL.h:

Canonical link: https://commits.webkit.org/262955@main